tests/NormalTests/paczka1/fuzzy1/75641629.err
Error in line 1: S370 S640 65,9
Error in line 24: S370 S640 2,5
Error in line 16: 5g7 S640 136,6
Error in line 32: S370 S370 67,0
